[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/Door.gd" type="Script" id=1]
[ext_resource path="res://textures/Doors/Door_2.tex" type="Texture" id=2]
[ext_resource path="res://textures/Doors/Door_3.tex" type="Texture" id=3]
[ext_resource path="res://textures/Doors/Door_4.tex" type="Texture" id=4]
[ext_resource path="res://textures/Doors/Door_1.tex" type="Texture" id=5]
[ext_resource path="res://textures/Doors/Door_0.tex" type="Texture" id=6]
[ext_resource path="res://Sounds/door.smp" type="Sample" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4.69376, 23.3364 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "OpenRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "OpenLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "Closed",
"speed": 5.0
} ]

[sub_resource type="SampleLibrary" id=3]

samples/door = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[node name="Door" type="StaticBody2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.128506, -0.514048 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )
state = 0

[node name="DoorRight" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.128506, -0.514048 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "Closed"

[node name="LeftRay" type="RayCast2D" parent="."]

transform/pos = Vector2( -5.80236, 0 )
enabled = true
cast_to = Vector2( -5, 0 )
layer_mask = 1
type_mask = 15

[node name="RightRay" type="RayCast2D" parent="."]

transform/pos = Vector2( 5.70053, -9.53674e-07 )
enabled = true
cast_to = Vector2( 5, 0 )
layer_mask = 1
type_mask = 15

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = -14.09
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_finished"]


